ignore generated robots and sitemap

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Twitter保存ランキング | Gofileダウンロード数リアルタイム表示 - TwiiterChan</title>
-  
+  <script type="text/javascript"> adroll_adv_id = "CYLXP62E7VFPJOMAKAHVTF"; adroll_pix_id = "TMFAK3PFDBDDZELP3VAAYV"; adroll_version = "2.0";  (function(w, d, e, o, a) { w.adroll_tag_source = w.adroll_tag_source || "manual"; w.__adroll_loaded = true; w.adroll = w.adroll || []; w.adroll.f = [ 'setProperties', 'identify', 'track', 'identify_email', 'get_cookie' ]; var roundtripUrl = "https://s.adroll.com/j/" + adroll_adv_id + "/roundtrip.js"; for (a = 0; a < w.adroll.f.length; a++) { w.adroll[w.adroll.f[a]] = w.adroll[w.adroll.f[a]] || (function(n) { return function() { w.adroll.push([ n, arguments ]) } })(w.adroll.f[a]) }  e = d.createElement('script'); o = d.getElementsByTagName('script')[0]; e.async = 1; e.src = roundtripUrl; o.parentNode.insertBefore(e, o); })(window, document); adroll.track("pageView"); </script> 
   <!-- SEO最適化 -->
   <meta name="description" content="Twitterで話題のGofileファイルをリアルタイムランキング表示。ダウンロード数順・新着順で簡単検索。Twitter動画・画像の保存ランキングサイト。">
   <meta name="keywords" content="Twitter保存,Gofileランキング,Twitter動画保存,ダウンロードランキング,リアルタイムランキング,Twitter画像保存,動画ランキング,人気動画,トレンド動画">
@@ -587,12 +587,7 @@
       </div>
     </header>
 
-  <!-- ★★★ 広告配置1: ヘッダー直下 (最重要・高単価エリア) ★★★ -->
-  <div class="ad-premium-top">
-    <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-    <ins id="1109235" data-width="300" data-height="100"></ins>
-    <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
-  </div>
+
   
     <div class="nav-tabs">
       <button class="nav-button active" data-mode="ranking">ランキング</button>
@@ -602,12 +597,6 @@
       <a href="contact.html" class="nav-button" style="text-decoration: none;">お問い合わせ</a>
     </div>
 
-      <!-- ★★★ 広告配置5: ランキング内2 (スクロール後の高視認) ★★★ -->
-      <div class="ad-in-ranking">
-        <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-        <ins id="1109238" data-width="774" data-height="290"></ins>
-        <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109238});</script>
-      </div>
 
     <!-- ランキングモード -->
     <div id="ranking-mode" class="mode-content">
@@ -629,13 +618,6 @@
   <button class="sort-btn" data-sort="popular">トレンド</button>
 </div>
 
-      <!-- ★★★ 広告配置4: ランキング内1 (最高収益エリア) ★★★ -->
-      <div class="ad-in-ranking">
-        <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-        <ins id="1109235" data-width="300" data-height="100"></ins>
-        <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
-      </div>
-
       <div class="status-bar">
         <div>合計 <strong><span id="total-count">0</span></strong> 件のファイル</div>
         <div id="last-update">最終更新: 待機中...</div>
@@ -648,12 +630,6 @@
         </div>
       </div>
 
-      <!-- ★★★ 広告配置5: ランキング内2 (スクロール後の高視認) ★★★ -->
-      <div class="ad-in-ranking">
-        <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-        <ins id="1109238" data-width="774" data-height="290"></ins>
-        <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109238});</script>
-      </div>
 
       <button class="load-more-btn" id="load-more-btn">もっと見る (次の12件)</button>
     </div>
@@ -672,12 +648,6 @@
         <div id="uploadStatus" class="status-bar" style="display: none;"></div>
       </div>
 
-      <!-- ★★★ 広告配置6: フォーム間 ★★★ -->
-      <div class="ad-content-between">
-        <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-        <ins id="1109235" data-width="300" data-height="100"></ins>
-        <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
-      </div>
 
       <div class="card">
         <h2>Webスクレイピング</h2>
@@ -693,13 +663,6 @@
     <div id="sites-mode" class="mode-content hidden">
       <div class="grid" id="sites-grid"></div>
 
-      <!-- ★★★ 広告配置7: サイト一覧後 ★★★ -->
-      <div class="ad-content-between">
-        <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-        <ins id="1109235" data-width="300" data-height="100"></ins>
-        <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
-      </div>
-    </div>
   </div>
 
   <!-- ★★★ 広告配置8: フッター (離脱防止) ★★★ -->
