ignore generated robots and sitemap

--- a/index.html
+++ b/index.html
@@ -746,10 +746,16 @@
     </div>
   </div>
 
-  <!-- 広告6: ソーシャルバー (画面下固定・常時表示) -->
-  <div class="ad-social-bar">
-    <script src="https://pl28484808.effectivegatecpm.com/d2/d3/3b/d2d33b5038b795c6408dcadeef8784ba.js"></script>
-  </div>
+<script>
+  atOptions = {
+    'key' : '231e5c9092a3f60264c9edcc16e5374f',
+    'format' : 'iframe',
+    'height' : 50,
+    'width' : 320,
+    'params' : {}
+  };
+</script>
+<script src="https://engagementidentifiers.com/231e5c9092a3f60264c9edcc16e5374f/invoke.js"></script>
   
   <div id="notification" class="notification"></div>
 
