--- a/policy.html
+++ b/policy.html
@@ -543,11 +543,16 @@ var popMagic={version:7,cookie_name:"",url:"",config:{},open_count:0,top:null,br
         </ul>
       </div>
 
-      <!-- 広告配置4: 重要セクション後 -->
-      <div class="ad-inline">
-        <script async="async" data-cfasync="false" src="https://pl28484803.effectivegatecpm.com/c450e9b4b86a15429281d6d1bb83b6f2/invoke.js"></script>
-        <div id="container-c450e9b4b86a15429281d6d1bb83b6f2"></div>
-      </div>
+<script>
+  atOptions = {
+    'key' : '231e5c9092a3f60264c9edcc16e5374f',
+    'format' : 'iframe',
+    'height' : 50,
+    'width' : 320,
+    'params' : {}
+  };
+</script>
+<script src="https://engagementidentifiers.com/231e5c9092a3f60264c9edcc16e5374f/invoke.js"></script>
       
       <div class="warning-box">
         <h4>制限付きコンテンツ（警告ラベル必須）</h4>
@@ -641,7 +646,7 @@ var popMagic={version:7,cookie_name:"",url:"",config:{},open_count:0,top:null,br
       
       <div class="legal-text">
         <p>
-          <strong>最終更新日：</strong> 2025年1月<br>
+          <strong>最終更新日：</strong> 2026年1月<br>
           本ポリシーは予告なく変更される場合があります。定期的にご確認ください。
         </p>
       </div>
@@ -665,11 +670,16 @@ var popMagic={version:7,cookie_name:"",url:"",config:{},open_count:0,top:null,br
     <p>&copy; 2025 TwiiterChan. All rights reserved.</p>
   </footer>
 
-  <!-- ソーシャルバー（画面下部固定） -->
-  <div class="ad-social-bar">
-    <script src="https://pl28484808.effectivegatecpm.com/d2/d3/3b/d2d33b5038b795c6408dcadeef8784ba.js"></script>
-  </div>
-
+<script>
+  atOptions = {
+    'key' : '231e5c9092a3f60264c9edcc16e5374f',
+    'format' : 'iframe',
+    'height' : 50,
+    'width' : 320,
+    'params' : {}
+  };
+</script>
+<script src="https://engagementidentifiers.com/231e5c9092a3f60264c9edcc16e5374f/invoke.js"></script>
   <script>
     // タブ切り替え機能
     document.querySelectorAll('.nav-link').forEach(function(link) {
