ignore generated robots and sitemap

--- a/index.html
+++ b/index.html
@@ -738,26 +738,21 @@
     <div id="sites-mode" class="mode-content hidden">
       <div class="grid" id="sites-grid"></div>
     </div>
-
-    <!-- 広告5: フッター (離脱防止・最後の収益化) -->
-    <div class="ad-footer">
+    <!-- 広告1: ヘッダー直下 - ネイティブバナー (高単価エリア) -->
+    <div class="ad-premium-top">
       <script async="async" data-cfasync="false" src="https://pl28484803.effectivegatecpm.com/c450e9b4b86a15429281d6d1bb83b6f2/invoke.js"></script>
       <div id="container-c450e9b4b86a15429281d6d1bb83b6f2"></div>
     </div>
-  </div>
 
-<script>
-  atOptions = {
-    'key' : '231e5c9092a3f60264c9edcc16e5374f',
-    'format' : 'iframe',
-    'height' : 50,
-    'width' : 320,
-    'params' : {}
-  };
-</script>
-<script src="https://engagementidentifiers.com/231e5c9092a3f60264c9edcc16e5374f/invoke.js"></script>
-  
-  <div id="notification" class="notification"></div>
+    <!-- スマートリンク (クリック単価最高) -->
+    <div class="ad-smartlink">
+      <a href="https://www.effectivegatecpm.com/qst8wwse?key=385ee7d478d037878c615a8416a3507a" target="_blank" style="text-decoration: none; color: inherit; display: block; width: 100%; text-align: center;">
+        <div style="padding: 20px; background: linear-gradient(135deg, #ff7f9c 0%, #b8d8e8 100%); color: white; border-radius: 12px; font-weight: 600; font-size: 16px;">
+          🎯 おすすめコンテンツをチェック
+        </div>
+      </a>
+    </div>
+
 
   <script>
 const state = {
