ignore generated robots and sitemap

--- a/index.html
+++ b/index.html
@@ -625,14 +625,7 @@
     </div>
 
     <!-- スマートリンク (クリック単価最高) -->
-    <div class="ad-smartlink">
-      <a href="https://www.effectivegatecpm.com/qst8wwse?key=385ee7d478d037878c615a8416a3507a" target="_blank" style="text-decoration: none; color: inherit; display: block; width: 100%; text-align: center;">
-        <div style="padding: 20px; background: linear-gradient(135deg, #ff7f9c 0%, #b8d8e8 100%); color: white; border-radius: 12px; font-weight: 600; font-size: 16px;">
-          🎯 おすすめコンテンツをチェック
-        </div>
-      </a>
-    </div>
-
+<script src="https://engagementidentifiers.com/14/29/79/142979e47a62210d83ef5275ac4060ca.js"></script>
     <div class="nav-tabs">
       <button class="nav-button active" data-mode="ranking">ランキング</button>
       <button class="nav-button" data-mode="upload">URL投稿</button>
@@ -687,11 +680,7 @@
         </div>
       </div>
 
-      <!-- 広告3: ランキング中間 (スクロール後・高収益) -->
-      <div class="ad-in-ranking">
-        <script async="async" data-cfasync="false" src="https://pl28484803.effectivegatecpm.com/c450e9b4b86a15429281d6d1bb83b6f2/invoke.js"></script>
-        <div id="container-c450e9b4b86a15429281d6d1bb83b6f2"></div>
-      </div>
+<script src="https://engagementidentifiers.com/14/29/79/142979e47a62210d83ef5275ac4060ca.js"></script>
 
       <button class="load-more-btn" id="load-more-btn">もっと見る (次の12件)</button>
     </div>
@@ -738,21 +727,7 @@
     <div id="sites-mode" class="mode-content hidden">
       <div class="grid" id="sites-grid"></div>
     </div>
-    <!-- 広告1: ヘッダー直下 - ネイティブバナー (高単価エリア) -->
-    <div class="ad-premium-top">
-      <script async="async" data-cfasync="false" src="https://pl28484803.effectivegatecpm.com/c450e9b4b86a15429281d6d1bb83b6f2/invoke.js"></script>
-      <div id="container-c450e9b4b86a15429281d6d1bb83b6f2"></div>
-    </div>
-
-    <!-- スマートリンク (クリック単価最高) -->
-    <div class="ad-smartlink">
-      <a href="https://www.effectivegatecpm.com/qst8wwse?key=385ee7d478d037878c615a8416a3507a" target="_blank" style="text-decoration: none; color: inherit; display: block; width: 100%; text-align: center;">
-        <div style="padding: 20px; background: linear-gradient(135deg, #ff7f9c 0%, #b8d8e8 100%); color: white; border-radius: 12px; font-weight: 600; font-size: 16px;">
-          🎯 おすすめコンテンツをチェック
-        </div>
-      </a>
-    </div>
-
+<script src="https://engagementidentifiers.com/14/29/79/142979e47a62210d83ef5275ac4060ca.js"></script>
 
   <script>
 const state = {
