--- a/index.html
+++ b/index.html
@@ -619,11 +619,16 @@
       </div>
     </header>
 
-    <!-- 広告1: ヘッダー直下 - ネイティブバナー (高単価エリア) -->
-    <div class="ad-premium-top">
-      <script async="async" data-cfasync="false" src="https://pl28484803.effectivegatecpm.com/c450e9b4b86a15429281d6d1bb83b6f2/invoke.js"></script>
-      <div id="container-c450e9b4b86a15429281d6d1bb83b6f2"></div>
-    </div>
+<script>
+  atOptions = {
+    'key' : '231e5c9092a3f60264c9edcc16e5374f',
+    'format' : 'iframe',
+    'height' : 50,
+    'width' : 320,
+    'params' : {}
+  };
+</script>
+<script src="https://engagementidentifiers.com/231e5c9092a3f60264c9edcc16e5374f/invoke.js"></script>
 
     <!-- スマートリンク (クリック単価最高) -->
 <script src="https://engagementidentifiers.com/14/29/79/142979e47a62210d83ef5275ac4060ca.js"></script>
@@ -649,7 +654,16 @@
           </select>
         </div>
       </div>
-
+<script>
+  atOptions = {
+    'key' : '231e5c9092a3f60264c9edcc16e5374f',
+    'format' : 'iframe',
+    'height' : 50,
+    'width' : 320,
+    'params' : {}
+  };
+</script>
+<script src="https://engagementidentifiers.com/231e5c9092a3f60264c9edcc16e5374f/invoke.js"></script>
       <div class="sort-controls">
         <button class="sort-btn active" data-sort="newest">新着順</button>
         <button class="sort-btn" data-sort="popular">トレンド</button>
@@ -682,7 +696,6 @@
       </div>
 
 <script src="https://engagementidentifiers.com/14/29/79/142979e47a62210d83ef5275ac4060ca.js"></script>
-
       <button class="load-more-btn" id="load-more-btn">もっと見る (次の12件)</button>
     </div>
     
@@ -723,12 +736,20 @@
         <div id="scrapeStatus" class="status-bar" style="display: none;"></div>
       </div>
     </div>
-
+<script>
+  atOptions = {
+    'key' : '231e5c9092a3f60264c9edcc16e5374f',
+    'format' : 'iframe',
+    'height' : 50,
+    'width' : 320,
+    'params' : {}
+  };
+</script>
+<script src="https://engagementidentifiers.com/231e5c9092a3f60264c9edcc16e5374f/invoke.js"></script>
     <!-- 関連サイトモード -->
     <div id="sites-mode" class="mode-content hidden">
       <div class="grid" id="sites-grid"></div>
     </div>
-<script src="https://engagementidentifiers.com/14/29/79/142979e47a62210d83ef5275ac4060ca.js"></script>
 
   <script>
 const state = {
