ignore generated robots and sitemap

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ja">
-  https://engagementidentifiers.com/qst8wwse?key=385ee7d478d037878c615a8416a3507a
 <head>
   <meta charset="utf-8">
   <title>Twitter保存ランキング | Gofileダウンロード数リアルタイム表示 - TwiiterChan</title>
@@ -618,16 +617,21 @@
         トレンドの動画や画像をすぐに発見できます。
       </div>
     </header>
+<div class="ad-premium">
+  <script async="async" data-cfasync="false" src="https://pl28484803.effectivegatecpm.com/c450e9b4b86a15429281d6d1bb83b6f2/invoke.js"></script>
+  <div id="container-c450e9b4b86a15429281d6d1bb83b6f2"></div>
+</div>
 
-<script>
-  atOptions = {
-    'key' : '231e5c9092a3f60264c9edcc16e5374f',
-    'format' : 'iframe',
-    'height' : 50,
-    'width' : 320,
-    'params' : {}
-  };
-</script>
+<div class="ad-premium">
+  <script async="async" data-cfasync="false" src="https://pl28484803.effectivegatecpm.com/c450e9b4b86a15429281d6d1bb83b6f2/invoke.js"></script>
+  <div id="container-c450e9b4b86a15429281d6d1bb83b6f2"></div>
+</div>
+
+<!-- ヘッダー広告2 -->
+<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+<ins class="eas6a97888e2" data-zoneid="5829212"></ins> 
+<script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
+      
 <script src="https://engagementidentifiers.com/231e5c9092a3f60264c9edcc16e5374f/invoke.js"></script>
 
     <!-- スマートリンク (クリック単価最高) -->
