ignore generated robots and sitemap

--- a/index.html
+++ b/index.html
@@ -607,6 +607,8 @@
 
   <div class="container">
     <header>
+      <div id="notification" class="notification"></div>
+
       <h1>Twitter保存ランキング</h1>
       <p class="subtitle">Gofileダウンロード数リアルタイム表示 | 人気動画・画像を即座にチェック</p>
       
