ignore generated robots and sitemap

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja" prefix="og: https://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
-  <title>Twitter保存ランキング | Gofileダウンロード数リアルタイム表示 - TwiiterChan</title>
+  <title>Twitter保存ちゃん。 | Gofileダウンロード数リアルタイム表示 - TwiiterChan</title>
   
   <!-- SEO最適化 -->
   <meta name="description" content="Twitterで話題のGofileファイルをリアルタイムランキング表示。ダウンロード数順・新着順で簡単検索。Twitter動画・画像の保存ランキングサイト。">
