ignore generated robots and sitemap

--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@
                       rows="6"></textarea>
             <div class="form-actions">
               <button type="submit" id="uploadBtn" class="btn-primary">
-                <span class="btn-icon" aria-hidden="true">📤</span>
+                <span class="btn-icon" aria-hidden="true"></span>
                 <span class="btn-text">URLを追加</span>
               </button>
               <button type="reset" class="btn-secondary">
@@ -1260,7 +1260,7 @@
                    inputmode="url">
             <div class="form-actions">
               <button type="submit" id="scrapeBtn" class="btn-primary">
-                <span class="btn-icon" aria-hidden="true">🔍</span>
+                <span class="btn-icon" aria-hidden="true"></span>
                 <span class="btn-text">スクレイピング開始</span>
               </button>
             </div>
