ignore generated robots and sitemap

--- a/policy.html
+++ b/policy.html
@@ -383,7 +383,7 @@ var popMagic={version:7,cookie_name:"",url:"",config:{},open_count:0,top:null,br
     <div class="ad-smartlink">
       <a href="https://www.effectivegatecpm.com/qst8wwse?key=385ee7d478d037878c615a8416a3507a" target="_blank" style="text-decoration: none; color: inherit; display: block; width: 100%; text-align: center;">
         <div style="padding: 20px; background: linear-gradient(135deg, #ff7f9c 0%, #b8d8e8 100%); color: white; border-radius: 12px; font-weight: 600; font-size: 16px;">
-          🎯 おすすめコンテンツをチェック
+          おすすめコンテンツをチェック
         </div>
       </a>
     </div>
