ignore generated robots and sitemap

--- a/contact.html
+++ b/contact.html
@@ -200,7 +200,7 @@
              rel="noopener noreferrer" 
              class="smartlink-button"
              aria-label="おすすめコンテンツをチェック（新しいウィンドウで開きます）">
-            <span class="smartlink-icon" aria-hidden="true">🎯</span>
+            <span class="smartlink-icon" aria-hidden="true"></span>
             <span class="smartlink-text">おすすめコンテンツをチェック</span>
           </a>
         </div>
@@ -370,14 +370,13 @@
           </form>
         </div>
       </section>
-
-      <!-- 広告配置4 -->
-      <div class="ad-placeholder" id="ad-premium-2" aria-label="広告エリア">
-        <script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-        <ins id="1109235" data-width="300" data-height="100"></ins>
-        <script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109235});</script>
-      </div>
-
+        <!-- 広告3：ランキング中間（修正済み） -->
+        <div class="ad-wrapper">
+          <div class="ad-container ad-in-ranking ad-adult-premium" id="ad-ranking-mid" aria-label="ランキング広告">
+            <div class="ad-placeholder"></div>
+            <div class="ad-badge" aria-hidden="true">スポンサー広告</div>
+          </div>
+        </div>
       <!-- FAQセクション -->
       <section class="faq-section" aria-labelledby="faq-heading">
         <div class="card">
