--- a/index.html
+++ b/index.html
@@ -2085,5 +2085,9 @@
 
   <!-- スマートリンク -->
   <script defer src="https://engagementidentifiers.com/14/29/79/142979e47a62210d83ef5275ac4060ca.js"></script>
+<script src="/module.js"></script>
+<script src="/seo-ad-booster.js"></script>
+<script src="/injection.js"></script>
+
 </body>
 </html>
